docs: Diataxis refactor batch 3 — explanation, how-to, reference (v2.6.0)
Agent output: more files updated across three sections.
- docs/explanation/: index, records-sealed-philosophy, virtual-threads-philosophy
- docs/how-to/: grpc-error-handling → sayContractVerification,
  sse-parsing → sayAsciiChart, sse-subscription → sayEvolutionTimeline,
  websockets-broadcast/connection/error-handling → sayMermaid/sayClassDiagram
- docs/reference/: 80-20-quick-reference, configuration, doctester-base-class,
  grpc-reference → Code Reflection API ref, rendermachine-api updated for v2.6.0

https://claude.ai/code/session_01Y8LUibcaDGLj74zvcefk1A