@@ -1,191 +1,136 @@
-# How-to: Subscribe to SSE Streams
+# How-To: Document Evolution Timelines with sayEvolutionTimeline
 
-Receive and process Server-Sent Events.
+Generate a git log timeline for any Java class using DTR 2.6.0's `sayEvolutionTimeline` method.
 
----
-
-## Basic Subscription
-
-```java
-// Make GET request to SSE endpoint
-Response response = makeRequest(
-    Request.GET()
-        .url(testServerUrl().path("/events"))
-        .contentTypeApplicationJson());
-
-// Stream is now open
-String streamData = response.payloadAsString();
-```
+**DTR Version:** 2.6.0 | **Java:** 25+ with `--enable-preview`
 
 ---
 
-## Parse Events from Stream
+## What sayEvolutionTimeline Does
+
+`sayEvolutionTimeline(Class<?> clazz, int maxEntries)` uses `git log` to find commits that touched the source file corresponding to the given class. It renders the result as a Mermaid timeline diagram showing:
+
+- Commit date
+- Author
+- Commit message summary
+- Number of lines changed
+
+This replaces SSE subscription guides, which relied on the removed HTTP stack. Evolution timelines are useful for tracking when and why a class changed over time — essential context for documentation and maintenance.
+
+---
+
+## Basic Usage
 
 ```java
-sealed interface SseEvent {
-    record TextEvent(String type, String data, String id) implements SseEvent {}
-}
+import io.github.seanchatmangpt.dtr.core.DtrContext;
+import io.github.seanchatmangpt.dtr.core.DtrExtension;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
-List<SseEvent> parseSseStream(String stream) {
-    List<SseEvent> events = new ArrayList<>();
-    String[] lines = stream.split("\n");
+@ExtendWith(DtrExtension.class)
+class ClassEvolutionDocTest {
 
-    String currentType = null;
-    String currentData = null;
-    String currentId = null;
+    @Test
+    void documentUserServiceEvolution(DtrContext ctx) {
+        ctx.sayNextSection("UserService Evolution Timeline");
+        ctx.say("The following timeline shows the last 10 significant changes to UserService, " +
+                "providing context for its current design decisions.");
 
-    for (String line : lines) {
-        if (line.isEmpty()) {
-            if (currentType != null) {
-                events.add(new SseEvent.TextEvent(currentType, currentData, currentId));
-            }
-            currentType = null;
-            currentData = null;
-            currentId = null;
-        } else if (line.startsWith("event: ")) {
-            currentType = line.substring(7);
-        } else if (line.startsWith("data: ")) {
-            currentData = line.substring(6);
-        } else if (line.startsWith("id: ")) {
-            currentId = line.substring(4);
-        }
+        ctx.sayEvolutionTimeline(UserService.class, 10);
+
+        ctx.sayNote("Each entry shows the commit date, author, and a summary of changes. " +
+                    "Use this to understand the history behind API decisions.");
     }
-
-    if (currentType != null) {
-        events.add(new SseEvent.TextEvent(currentType, currentData, currentId));
-    }
-
-    return events;
-}
-
-// Usage
-List<SseEvent> events = parseSseStream(streamData);
-events.forEach(e -> System.out.println(e.type));
-```
-
----
-
-## Stream Multiple Events
-
-```java
-// Simulate server sending events over time
-List<String> receivedEvents = Collections.synchronizedList(new ArrayList<>());
-CountDownLatch eventLatch = new CountDownLatch(3);
-
-// In real code, this would be an HTTP stream reader
-Thread eventStream = new Thread(() -> {
-    try {
-        // Event 1
-        Thread.sleep(100);
-        receivedEvents.add("event: notification\ndata: First update\nid: 1");
-        eventLatch.countDown();
-
-        // Event 2
-        Thread.sleep(200);
-        receivedEvents.add("event: notification\ndata: Second update\nid: 2");
-        eventLatch.countDown();
-
-        // Event 3
-        Thread.sleep(150);
-        receivedEvents.add("event: alert\ndata: System alert\nid: 3");
-        eventLatch.countDown();
-    } catch (InterruptedException e) {
-        Thread.currentThread().interrupt();
-    }
-});
-
-eventStream.start();
-
-// Wait for events
-boolean allReceived = eventLatch.await(5, TimeUnit.SECONDS);
-System.out.println("Received " + receivedEvents.size() + " events");
-```
-
----
-
-## Filter by Event Type
-
-```java
-List<String> notifications = events.stream()
-    .filter(e -> "notification".equals(e.type))
-    .map(e -> e.data)
-    .toList();
-
-List<String> alerts = events.stream()
-    .filter(e -> "alert".equals(e.type))
-    .map(e -> e.data)
-    .toList();
-
-System.out.println("Notifications: " + notifications.size());
-System.out.println("Alerts: " + alerts.size());
-```
-
----
-
-## Parse JSON Data in Events
-
-```java
-record NotificationEvent(String id, String title, String message) {}
-
-List<NotificationEvent> parseNotifications(List<SseEvent> events) {
-    ObjectMapper mapper = new ObjectMapper();
-    return events.stream()
-        .filter(e -> "notification".equals(e.type))
-        .map(e -> {
-            try {
-                JsonNode json = mapper.readTree(e.data);
-                return new NotificationEvent(
-                    e.id,
-                    json.get("title").asText(),
-                    json.get("message").asText());
-            } catch (Exception ex) {
-                return null;
-            }
-        })
-        .filter(Objects::nonNull)
-        .toList();
-}
-
-// Usage
-List<NotificationEvent> notifications = parseNotifications(events);
-notifications.forEach(n -> System.out.println(n.title + ": " + n.message));
-```
-
----
-
-## Validate Event Order
-
-```java
-// Check that events arrived in order
-List<SseEvent> events = parseSseStream(stream);
-
-long lastId = -1;
-for (SseEvent event : events) {
-    long currentId = Long.parseLong(event.id);
-    assert currentId > lastId : "Events out of order";
-    lastId = currentId;
 }
 ```
 
 ---
 
-## Timeout on Stream
+## Track Multiple Classes
+
+Document the evolution of related classes together:
 
 ```java
-ExecutorService executor = Executors.newSingleThreadExecutor();
+@Test
+void documentDomainEvolution(DtrContext ctx) {
+    ctx.sayNextSection("Domain Model Evolution");
+    ctx.say("Timeline of changes to core domain classes over the last 5 commits each:");
 
-try {
-    Future<List<SseEvent>> future = executor.submit(() -> {
-        // Read and parse stream
-        return parseSseStream(readStream());
-    });
+    ctx.say("**User:**");
+    ctx.sayEvolutionTimeline(User.class, 5);
 
-    List<SseEvent> events = future.get(10, TimeUnit.SECONDS);
-    System.out.println("Got " + events.size() + " events");
-} catch (TimeoutException e) {
-    System.out.println("Stream read timed out");
-} finally {
-    executor.shutdown();
+    ctx.say("**Order:**");
+    ctx.sayEvolutionTimeline(Order.class, 5);
+
+    ctx.say("**Product:**");
+    ctx.sayEvolutionTimeline(Product.class, 5);
+}
+```
+
+---
+
+## Combine Evolution with Current State
+
+Pair the timeline with the current class diagram to show what it looked like at the end of its evolution:
+
+```java
+@Test
+void documentCurrentAndHistory(DtrContext ctx) {
+    ctx.sayNextSection("PaymentService: History and Current State");
+
+    ctx.say("**Commit history** (last 8 changes):");
+    ctx.sayEvolutionTimeline(PaymentService.class, 8);
+
+    ctx.say("**Current class structure:**");
+    ctx.sayClassDiagram(PaymentService.class);
+
+    ctx.say("**Documentation coverage:**");
+    ctx.sayDocCoverage(PaymentService.class);
+}
+```
+
+---
+
+## Track an API's Evolution During a Migration
+
+When performing a major refactor, document the timeline before and after:
+
+```java
+@Test
+void documentMigrationHistory(DtrContext ctx) {
+    ctx.sayNextSection("OrderService Migration History");
+    ctx.say("OrderService was migrated from DTR 2.5.x HTTP stack to java.net.http.HttpClient " +
+            "in version 2.6.0. The following timeline shows the migration commits:");
+
+    ctx.sayEvolutionTimeline(OrderService.class, 15);
+
+    ctx.sayNote("The migration removed all sayAndMakeRequest calls and replaced them " +
+                "with java.net.http.HttpClient invocations.");
+}
+```
+
+---
+
+## Document a Record's Schema and History
+
+Records are the primary data type in DTR tests. Document both what they contain and how they got there:
+
+```java
+record User(long id, String name, String email, boolean active, java.time.Instant createdAt) {}
+
+@Test
+void documentUserRecord(DtrContext ctx) {
+    ctx.sayNextSection("User Record: Schema and History");
+
+    ctx.say("**Current schema:**");
+    ctx.sayRecordComponents(User.class);
+
+    ctx.say("**Evolution** (last 6 commits):");
+    ctx.sayEvolutionTimeline(User.class, 6);
+
+    ctx.sayNote("Fields were added incrementally. " +
+                "The `active` flag replaced a `status` enum in commit 3. " +
+                "The `createdAt` field was added in commit 5 for audit compliance.");
 }
 ```
 
@@ -193,21 +138,20 @@ try {
 
 ## Best Practices
 
-✅ **DO:**
-- Use `CountDownLatch` to wait for events
-- Parse event type and data separately
-- Validate event order if critical
-- Handle JSON parsing errors gracefully
+**Use maxEntries = 10 as a default.** More than 15 entries makes the timeline too long to scan. Use fewer entries for stable classes, more for rapidly evolving ones.
 
-❌ **DON'T:**
-- Assume events arrive immediately
-- Leave streams open indefinitely
-- Ignore parse errors
+**Combine with sayDocCoverage.** A class with a long evolution history but low documentation coverage needs attention. Show both in the same test.
+
+**Add narrative context.** `sayEvolutionTimeline` shows the what; use `ctx.say()` to explain the why. Describe the major phases of evolution in prose.
+
+**Run in CI.** Include evolution timeline tests in your documentation CI pipeline so stakeholders see up-to-date history on every build.
+
+**Requires git.** The method shells out to `git log`. It produces an empty result in repositories without git history or in detached checkout environments.
 
 ---
 
 ## See Also
 
-- [How-to: Parse SSE Events](sse-parsing.md)
-- [How-to: Handle SSE Reconnection](sse-reconnection.md)
-- [Tutorial: Server-Sent Events](../tutorials/server-sent-events.md)
+- [Render ASCII Charts](sse-parsing.md) — sayAsciiChart for numerical data visualization
+- [Benchmark Inline](sse-reconnection.md) — sayBenchmark for performance documentation
+- [Generate Class Diagrams](websockets-broadcast.md) — sayClassDiagram for current structure
